--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.7.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "puppeteer": "npm:rebrowser-puppeteer@^23.3.1",
+    "puppeteer-core": "npm:rebrowser-puppeteer-core@^23.3.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
