--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.38",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^7.105.0",
     "@t3-oss/env-nextjs": "^0.9.2",
@@ -29,6 +30,8 @@
     "postgres": "^3.4.3",
     "posthog-js": "^1.116.6",
     "posthog-node": "^4.0.0",
+    "puppeteer": "npm:rebrowser-puppeteer@^23.3.1",
+    "puppeteer-core": "npm:rebrowser-puppeteer-core@^23.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
@@ -36,9 +39,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.7.0",
-    "zod": "^3.22.4",
-    "puppeteer": "npm:rebrowser-puppeteer@^23.3.1",
-    "puppeteer-core": "npm:rebrowser-puppeteer-core@^23.3.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
