--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@upstash/ratelimit": "^1.0.1",
     "@upstash/redis": "^1.29.0",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
+    "cli-progress": "^3.12.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
     "lucide-react": "^0.364.0",
     "next": "^14.1.3",
     "next-themes": "^0.3.0",
+    "p-queue": "^8.1.0",
     "postgres": "^3.4.3",
     "posthog-js": "^1.116.6",
     "posthog-node": "^4.0.0",
