--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postgres": "^3.4.3",
     "posthog-js": "^1.116.6",
     "posthog-node": "^4.0.0",
+    "proper-lockfile": "^4.1.2",
     "puppeteer": "npm:rebrowser-puppeteer@^23.3.1",
     "puppeteer-core": "npm:rebrowser-puppeteer-core@^23.3.1",
     "react": "18.2.0",
